# pyanura

./: .gitignore  99-anura.rules  CHANGELOG.md  README.md  VERSION  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: issue-template.md
.github/workflows/: ci.yaml  publish.yaml  version-checks.yml
anura/: __init__.py  dataclasses_cbor.py  marshalling.py
anura/avss/: __init__.py  bleak_avss_client.py  client.py  exceptions.py  models.py  protocol.py  settings.py
anura/avss/transport/: __init__.py  proxy.py
anura/cli/: __init__.py  __main__.py  avss_commands.py  init.py  session.py  transceiver_commands.py
anura/transceiver/: __init__.py  client.py  exceptions.py  models.py  proxy_avss_client.py
anura/transceiver/transport/: __init__.py  base.py  tcp.py  usb.py  usb_dummy.py
examples/collect_files/: README.md  main.py  pyproject.toml
examples/forwarder/: README.md  __main__.py  example-config.json  forwarder.py  pyproject.toml
scripts/: reltool.py
src/anura/: marshalling.py
src/anura/avss/: __init__.py  client.py  exceptions.py  models.py  protocol.py  settings.py  uuids.py
src/anura/avss/transport/: __init__.py  base.py  bleak.py  proxy.py
src/anura/cli/: __main__.py
src/anura/transceiver/: __init__.py  client.py  exceptions.py  models.py  proxy_avss_client.py
src/anura/transceiver/transport/: __init__.py  base.py  tcp.py  usb.py  usb_dummy.py
tests/: test_avss.py  test_marshalling.py  test_transceiver_api.py
