[project]
name = "pyanura"
requires-python = ">=3.11"
dynamic = ["version"]
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
    "cbor2>=5.7.1",
]

[project.optional-dependencies]
usb = [
    "pyusb>=1.3.1",
]
ble = [
    "bleak>=1.1.1",
]

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[tool.uv.workspace]
members = ["packages/pyanura-cli"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
