[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyanura"
requires-python = ">=3.11"
dynamic = ["version"]
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
    "cbor2>=5.7.1",
]

[project.optional-dependencies]
usb = [
    "pyusb>=1.3.1",
]
ble = [
    "bleak>=1.1.1",
]

[dependency-groups]
dev = [
    "packaging>=26.0",
    "pytest>=9.0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/anura"]

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>.+)"

[tool.uv.workspace]
members = ["packages/pyanura-cli"]
